// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridTemplateAreas renders 0 1`] = `
Array [
  .c0 {
  grid-template-areas: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateAreas renders function 1`] = `
Array [
  .c0 {
  grid-template-areas: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateAreas renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-template-areas: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateAreas renders negative number 1`] = `
Array [
  .c0 {
  grid-template-areas: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateAreas renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-template-areas: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-areas: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-areas: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template-areas: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-template-areas: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-areas: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-areas: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template-areas: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-template-areas: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-areas: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-areas: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template-areas: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-template-areas: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-areas: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-areas: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template-areas: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateAreas renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    grid-template-areas: July;
  }
}

@media April {
  .c0 {
    grid-template-areas: August;
  }
}

@media January {
  .c0 {
    grid-template-areas: September;
  }
}

@media April {
  .c0 {
    grid-template-areas: November;
  }
}

@media June {
  .c0 {
    grid-template-areas: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-template-areas: July;
  }
}

@media April {
  .c0 {
    grid-template-areas: August;
  }
}

@media January {
  .c0 {
    grid-template-areas: September;
  }
}

@media April {
  .c0 {
    grid-template-areas: November;
  }
}

@media June {
  .c0 {
    grid-template-areas: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-template-areas: January;
  }
}

@media April {
  .c0 {
    grid-template-areas: December;
  }
}

@media January {
  .c0 {
    grid-template-areas: April;
  }
}

@media April {
  .c0 {
    grid-template-areas: May;
  }
}

@media June {
  .c0 {
    grid-template-areas: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-template-areas: January;
  }
}

@media April {
  .c0 {
    grid-template-areas: December;
  }
}

@media January {
  .c0 {
    grid-template-areas: April;
  }
}

@media April {
  .c0 {
    grid-template-areas: May;
  }
}

@media June {
  .c0 {
    grid-template-areas: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateAreas renders postitive number 1`] = `
Array [
  .c0 {
  grid-template-areas: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateAreas renders string 1`] = `
Array [
  .c0 {
  grid-template-areas: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateAreas renders valid theme path 1`] = `
Array [
  .c0 {
  grid-template-areas: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-areas: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
